End of the Project :)

--- a/todo_app/src/components/UI/Button.module.css
+++ b/todo_app/src/components/UI/Button.module.css
@@ -2,7 +2,7 @@
     width: 15%;
     margin-left: 15px;
     padding: 10px 15px;
-    background-color: #007BFF;
+    background-color: rgb(24, 3, 97);
     color: #fff;
     border: none;
     border-radius: 4px;
