--- a/todo_app/src/components/Todos/TodoForm.module.css
+++ b/todo_app/src/components/Todos/TodoForm.module.css
@@ -22,7 +22,7 @@
 }
 
 .todoFormContainer input:focus {
-    border-color: #007BFF;
+    border-color: #ff7300;
     outline: none;
 }
 
@@ -31,7 +31,7 @@
     width: 45%;
     margin-top: 15px;
     padding: 10px;
-    background-color: #007BFF;
+    background-color: #ff7300;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -40,5 +40,5 @@
 }
 
 .todoFormContainer button:hover {
-    background-color: #0056b3;
+    background-color: #8a4d02;
 }
